<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/user_category">

        <EditTextPreference
            android:title="@string/user_option"
            android:summary=""
            android:key="userName" />
        <EditTextPreference
            android:title="@string/email_option"
            android:summary=""
            android:key="userEmail" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/map_category">
        <CheckBoxPreference android:title="@string/map_option"
            android:defaultValue="false"
            android:summary="@string/map_option_description"
            android:key="mapOption" />
    </PreferenceCategory>

</PreferenceScreen>