<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/points_of_interest">
        <menu>
            <item
                android:id="@+id/nav_running"
                android:icon="@drawable/ic_menu_point_of_interest"
                android:title="@string/running_circuits" />
            <item
                android:id="@+id/nav_facilities"
                android:icon="@drawable/ic_menu_point_of_interest"
                android:title="@string/sport_facilities" />
        </menu>
    </item>

    <item android:title="@string/map_category">
        <menu>
            <item
                android:id="@+id/nav_locations"
                android:icon="@drawable/ic_menu_map"
                android:title="@string/interest_location" />
        </menu>
    </item>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_suggestion"
                android:icon="@drawable/ic_menu_sendmail"
                android:title="@string/suggestion" />
        </menu>
    </item>

</menu>
